<resources>
    <string name="app_name">IDEC Argentina</string>
    <!--CARGA ACTIVITY -->
    <!-- Carga -->
    <string name="carga">Abriendo aplicación</string>
    <!--MAIN ACTIVITY -->
    <!-- Acceso -->
    <string name="bienvenida">Bienvenido!</string>
    <!-- Acceso -->
    <string name="log_in">Acceder</string>

    <!-- Crear Usuario -->
    <string name="crear_usuario">Registrate</string>

    <!-- Que es el idec -->
    <string name="info">Que es el IDEC?</string>

    <!--LOGIN ACTIVITY -->
    <!-- Usuario-->
    <string name="nombre_usuario">Email</string>

    <!-- Contraseña-->
    <string name="nombre_contraseña">Contraseña</string>

    <!-- Contraseña que no coincide-->
    <string name="toast_contraseña">La contraseña no coincide con la anterior. Si no la recuerda contacte con el administrador</string>

    <!-- Entrar-->
    <string name="boton_entrar">Entrar</string>

    <!-- No hay internet-->
    <string name="toast_internet">Verifique la conexión a Internet</string>

    <!-- Login incorrecto-->
    <string name="toast_datosincorrectos">Mail o contraseña incorrectas</string>

    <!--REGISTRO ACTIVITY-->
    <!-- Nombre-->
    <string name="registro_nombre">Nombre</string>

    <!-- Apellido-->
    <string name="registro_apellido">Apellido</string>

    <!-- Email-->
    <string name="registro_email">Email</string>

    <!-- Nro de Alumno-->
    <string name="registro_nroalumno">Número de alumno</string>

    <!-- Telefono-->
    <string name="registro_telefono">Número de teléfono</string>

    <!-- Contraseña1-->
    <string name="registro_password1">Ingrese la contraseña</string>

    <!-- Contraseña2-->
    <string name="registro_password2">Repita la contraseña</string>

    <!-- Contraseñaantigua-->
    <string name="registro_password3">Ingrese la contraseña antigua</string>

    <!-- Confirmacion cambio password-->
    <string name="text_confirmacionpassword">Confirma el cambio de contraseña?</string>

    <!-- Confirmacion cambio password-->
    <string name="texto_campoelegido">Campo elegido</string>


    <!-- Boton-->
    <string name="registro_boton">Guardar</string>

    <!-- Texto-->
    <string name="registro_texto">Nueva cuenta</string>

    <!-- Seleccion-->
    <string name="registro_campo">Seleccione el campo donde vas a colportar</string>

    <!-- Toast Advertiencia contraseña-->
    <string name="registro_toast_password">Las contraseñas ingresadas no coinciden</string>

    <!-- Toast Advertiencia Email-->
    <string name="registro_toast_mail">El formato del email es incorrecto</string>

    <!-- Toast Advertiencia elegir campo-->
    <string name="registro_toast_camposcolp">Debe seleccionar una opción</string>

    <!-- Toast Advertiencia Campos vaciosl-->
    <string name="registro_toast_campos">Es necesario completar todos los campos</string>

    <!-- Toast Cuenta Creada-->
    <string name="registro_toast_cuentacreada">Cuenta creada</string>

    <!-- Alert Dialog -->
    <string name="registro_alert_titulo">Ya tenes tu cuenta creada!</string>
    <string name="registro_alert_contenido">¿Deseas entrar a tu cuenta por primera vez?</string>
    <string name="registro_alert_si">Si</string>

    <!--ADMIN ACTIVITY-->
    <!-- Nombre de cuenta-->
    <string name="admin_cuentaadmin">Cuenta de administrador</string>

    <!-- Saludo-->
    <string name="admin_saludo">Hola</string>

    <!-- Boton Administracion Influencer-->
    <string name="admin_influencer">Administración Colportor Influencer</string>

    <!-- Boton Administracion Influencer-->
    <string name="admin_colportores">Administración Colportores</string>

    <!-- Boton Administracion Pasaporte-->
    <string name="admin_pasaporte">Administración Pasaporte del colportor</string>

    <!-- Boton Pasaporte colportor-->
    <string name="pasaporte_user">Pasaporte del colportor</string>

    <!-- Boton habilitar colportor-->
    <string name="pasaporteadmin_habilitar">Desea habilitar el pasaporte al colportor seleccionado?</string>

    <!-- Boton deshabilitar colportor-->
    <string name="pasaporteadmin_deshabilitar">Desea deshabilitar el pasaporte al colportor seleccionado?</string>

    <!-- Pasaporte denegado-->
    <string name="pasaporte_denegado">Pasaporte denegado</string>

    <!-- Pasaporte habilitado-->
    <string name="pasaporte_habilitado">Pasaporte habilitado</string>

    <!-- Pasaporte habilitado-->
    <string name="pasaporte_actualizado">Pasaporte actualizado</string>

    <!-- Boton Cambiar contraseña-->
    <string name="boton_contraseña">Cambiar contraseña</string>

    <!-- Boton Editar usuario-->
    <string name="texto_editusuario">Editar usuario</string>

    <!-- Guardar modificaciones usuario-->
    <string name="texto_confirmarmodificaciones">Está seguro que desea guardar las modificaciones?</string>

    <!-- Advertencia borrar colportor-->
    <string name="toast_borrar_colportor">¿Esta seguro que desea borrar el colportor seleccionado?</string>

    <!-- Alert cambiar rol administrador-->
    <string name="alert_rol_admin">¿Desea cambiar el rol a administrador?</string>

    <!-- Alert cambiar rol user-->
    <string name="alert_rol_user">¿Desea cambiar el rol a colportor?</string>

    <!-- Toast rol actualizado-->
    <string name="toast_rol_actualizado">Rol actualizado</string>

    <!-- Toast colportor eliminado-->
    <string name="toast_colportor_eliminado">Colportor eliminado</string>


    <!--USER ACTIVITY-->
    <!-- Nombre de cuenta-->
    <string name="user_cuentauser">Cuenta de colportor</string>

    <!--Influencer-->
    <string name="user_influencer">Colportor Influencer</string>

    <!--Influencer-->
    <string name="user_geocolportaje">GeoColportaje</string>

    <!--Influencer-->
    <string name="user_configpersonal">Configuración personal</string>


    <!--INFLUENCER ACTIVITY-->
    <!-- Compromiso-->
    <string name="influencer_compromiso">Compromiso</string>

    <!-- Texto de compromiso-->
    <string name="influencer_compromisotexto">Orar y actuar, estando presente en la vida de mis amigos y compañeros, para que conozcan sobre la obra misionera del colportaje y motivarlos de distintas maneras, para que sean parte de una campaña durante las vacaciones
    </string>

    <!-- GLOBAL-->
    <!-- Agregar-->
    <string name="boton_agregar">Agregar</string>

    <!-- Editar-->
    <string name="boton_editar">Editar</string>

    <!-- Borrar-->
    <string name="boton_borrar">Borrar</string>

    <!-- Atencion-->
    <string name="atencion">Atención</string>

    <!-- Colportor influencer-->
    <string name="influencer">Colportor influencer</string>

    <!-- Ver-->
    <string name="boton_ver">Ver</string>

    <!-- Cerrar sesion-->
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Mensaje cerrar sesion-->
    <string name="toast_cerrarsesion">Está seguro que desea cerrar la sesión?</string>

    <!-- Proximamente-->
    <string name="toast_proximamente">Proximamente</string>

    <!--NUEVO ASPIRANTE ACTIVITY-->
    <!-- titulo de nuevo aspirante-->
    <string name="nuevoaspirante_titulo">Crear nuevo candidato a colportor</string>

    <!-- Alert Dialog -->
    <string name="nuevoaspirante_alert_titulo">Candidato creado!</string>
    <string name="nuevoaspirante_alert_contenido">¿Deseas guardar otro candidato?</string>
    <string name="nuevoaspirante_toast_aspirantenuevo">Candidato creado</string>

    <string name="texto_crearaspirante">Desesa guardar el candidato a colportor?</string>
    <string name="texto_borraraspirante">Desesa eliminar el candidato a colportor?</string>
    <string name="toast_aspiranteeliminado">Candidato eliminado</string>

    <string name="editaraspirante_confirmacion">¿Está seguro de editar el candidato a colportor?</string>
    <string name="nuevoaspirante_confirmacion">¿Está seguro de guardar el candidato a colportor?</string>


    <!-- actualizar aspirante toast-->
    <string name="aspiranteactualizado_toast">Candidato a colportor actualizado</string>

    <!--Ver ASPIRANTE ACTIVITY-->
    <!-- ver aspirante-->
    <string name="vercandidato_titulo">Seleccione un candidato a colportor</string>

    <string name="title_activity_maps">Mapa</string>

    <string name="boton_ubicacion_maps">Mi ubicación</string>
    <string name="boton_guardarpunto_maps">Guardar punto</string>
    <string name="boton_verpuntos_maps">Ver puntos guardados</string>
    <string name="boton_masopciones_maps">Más opciones</string>

    <string name="boton_guardarpunto">Para guardar una ubicacion primero debe obtenerla. Presione "mi ubicación" primero</string>




    <string name="verpunto_titulo">Seleccione un punto geográfico</string>

    <!--Nuevo punto y mapa ACTIVITY-->
    <string name="toast_nuevopunto">Punto guardado</string>
    <string name="ubicacion_actual">Ubicación actual</string>
    <string name="ubicacion_desactivada">Ubicación deshabilitada. Por favor active la ubicación del celular</string>
    <string name="texto_crearpunto">Desesa guardar el punto geográfico?</string>

    <string name="texto_editarpunto">Desesa editar el punto geográfico?</string>

    <string name="toast_punto">Desesa borrar el punto?</string>

    <string name="toast_puntoeliminado">Punto eliminado</string>

    <string name="txt_selectcolportor">Seleccione un colportor</string>

    <string name="txt_opciones">Opciones de colportaje</string>

    <string name="texto_latitud">Latitud</string>
    <string name="texto_longitud">Longitud</string>
    <string name="texto_titulo">Título</string>
    <string name="texto_Descripcion">Descripción</string>

    <string name="texto_Puntomodificado">Punto modificado</string>



</resources>
