<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorInfluencer"
    tools:context=".User.InfluencerActivity">

    <Button
        android:id="@+id/btnVer_influencer"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_ver"
        android:onClick="onClick"
        android:text="@string/boton_ver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNuevo_influencer" />

    <Button
        android:id="@+id/btnNuevo_influencer"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_nuevo"
        android:onClick="onClick"
        android:text="@string/boton_agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/influencer_logo" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/influencer_compromiso"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="310dp"
        android:layout_height="139dp"
        android:background="@drawable/gradient_compromiso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="285dp"
            android:layout_height="120dp"
            android:gravity="center|center_vertical"
            android:text="@string/influencer_compromisotexto"
            android:textColor="@color/design_default_color_background"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnEditar_influencer"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_editar"
        android:onClick="onClick"
        android:text="@string/boton_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVer_influencer" />

    <Button
        android:id="@+id/btnEliminar_influencer"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_borrar"
        android:onClick="onClick"
        android:text="@string/boton_borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditar_influencer"
        app:layout_constraintVertical_bias="0.013" />

</androidx.constraintlayout.widget.ConstraintLayout>