<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.OpcionespuntoActivity">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_opciones"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <Button
        android:id="@+id/btnVer_Opciones"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_ver"
        android:onClick="onClick"
        android:text="@string/boton_ver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <Button
        android:id="@+id/btnEditar_Opciones"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_editar"
        android:onClick="onClick"
        android:text="@string/boton_editar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVer_Opciones" />

    <Button
        android:id="@+id/btnEliminar_Opciones"
        android:layout_width="301dp"
        android:layout_height="42dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/boton_blanco"
        android:drawableLeft="@drawable/ic_borrar"
        android:onClick="onClick"
        android:text="@string/boton_borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditar_Opciones" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="372dp"
        android:layout_height="147dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_geolocalizacion" />
</androidx.constraintlayout.widget.ConstraintLayout>