<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".Admin.AdminActivity">

    <Button
        android:id="@+id/btnGeocolportaje_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/boton_btnmenuppal"
        android:drawableLeft="@drawable/logo_geo"
        android:onClick="onClick"
        android:text="@string/user_geocolportaje"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="417dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="207dp"
        android:layout_height="101dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:srcCompat="@drawable/logo_idec" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="408dp"
        android:layout_height="35dp"
        android:background="@color/colorUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lblUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_cuentauser"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    android:text="@string/admin_saludo" <!--TODO -->

    <TextView
        android:id="@+id/lblSaludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btnSalir_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="356dp"
        android:background="@drawable/boton_salir"
        android:drawableLeft="@drawable/logo_salir"
        android:onClick="onClick"
        android:text="@string/cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIConfigpersonal_User"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnInfluencer_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/boton_btnmenuppal"
        android:drawableLeft="@drawable/influencer"
        android:onClick="onClick"
        android:text="@string/user_influencer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSaludo" />


    <Button
        android:id="@+id/btnPasaporte_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/boton_btnmenuppal"
        android:drawableLeft="@drawable/ic_pasaporte"
        android:onClick="onClick"
        android:text="Pasaporte del colportor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInfluencer_User" />

    <Button
        android:id="@+id/btnIConfigpersonal_User"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_configuracion"
        android:drawableLeft="@drawable/ic_admincolp"
        android:onClick="onClick"
        android:text="@string/user_configpersonal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPasaporte_User" />

</androidx.constraintlayout.widget.ConstraintLayout>