<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".Admin.AdminActivity">

    <ProgressBar
        android:id="@+id/prBar_mapa"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".User.MapsActivity" />


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/btnMenu_Maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:fab_labelStyle="@style/etiqueta"
        app:fab_addButtonColorNormal="@color/colorPrimary"
        app:fab_addButtonColorPressed="@color/colorPrimaryDark">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnOpciones_Maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_masopciones"
            app:fab_size="normal"
            app:fab_title="@string/boton_masopciones_maps" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnUbicacion_Maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_ubicacion"
            app:fab_size="normal"
            app:fab_title="@string/boton_ubicacion_maps" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnGuardarpunto_Maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_guardarubicacion"
            app:fab_size="normal"
            app:fab_title="@string/boton_guardarpunto_maps" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnVerpuntos_Maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="#FFFFFF"
            app:fab_icon="@drawable/ic_ver"
            app:fab_size="normal"
            app:fab_title="@string/boton_verpuntos_maps" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</androidx.constraintlayout.widget.ConstraintLayout>